<resources>
    <string name="app_name">Learn English</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dog">Dog</string>
    <string name="cat">Cat</string>
    <string name="lion">Lion</string>
    <string name="monkey">Monkey</string>
    <string name="sheep">Sheep</string>
    <string name="cow">Cow</string>
    <string name="one">One</string>
    <string name="two">Two</string>
    <string name="three">Three</string>
    <string name="four">Four</string>
    <string name="five">Five</string>
    <string name="six">Six</string>
</resources>