<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".fragment.NumbersFragment">

    <ImageButton
        android:id="@+id/buttonOne"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="32dp"
        android:background="@android:color/transparent"
        android:scaleType="centerCrop"
        android:src="@drawable/one"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck"
        android:contentDescription="@string/one" />

    <ImageButton
        android:id="@+id/buttonTwo"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="64dp"
        android:background="@android:color/transparent"
        android:scaleType="centerCrop"
        android:src="@drawable/two"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck"
        android:contentDescription="@string/two" />

    <ImageButton
        android:id="@+id/buttonThree"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="32dp"
        android:background="@android:color/transparent"
        android:scaleType="centerCrop"
        android:src="@drawable/three"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonOne"
        tools:ignore="SpeakableTextPresentCheck"
        android:contentDescription="@string/three" />

    <ImageButton
        android:id="@+id/buttonFour"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="64dp"
        android:background="@android:color/transparent"
        android:scaleType="centerCrop"
        android:src="@drawable/four"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonTwo"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck"
        android:contentDescription="@string/four" />

    <ImageButton
        android:id="@+id/buttonFive"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="32dp"
        android:background="@android:color/transparent"
        android:scaleType="centerCrop"
        android:src="@drawable/five"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonThree"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck"
        android:contentDescription="@string/five" />

    <ImageButton
        android:id="@+id/buttonSix"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="64dp"
        android:background="@android:color/transparent"
        android:scaleType="centerCrop"
        android:src="@drawable/six"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonFour"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck"
        android:contentDescription="@string/six" />

</androidx.constraintlayout.widget.ConstraintLayout>